<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.potjerodekool</groupId>
        <artifactId>nabu-parent</artifactId>
        <version>0.1.0-SNAPSHOT</version>
    </parent>

    <artifactId>native-backend</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <bytedeco.version>21.1.8-1.5.13</bytedeco.version>
        <javacpp.version>1.5.13</javacpp.version>
        <javacpp.platform>windows-x86_64</javacpp.platform>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.potjerodekool</groupId>
            <artifactId>nabu-compiler</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- De nabu-taalfrontend (.nabu bron: nabu visie, fun-declaraties,
             try/catch) zodat acceptance-tests écht .nabu-bestanden kunnen
             compileren via NabuCompiler.compile(...). -->
        <dependency>
            <groupId>io.github.potjerodekool</groupId>
            <artifactId>nabu-lang</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.github.potjerodekool</groupId>
            <artifactId>compiler-api</artifactId>
            <version>${project.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Bytedeco classes: bundled in the plugin-jar
             with maven-shade-plugin so the daemon can load them. -->
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacpp</artifactId>
            <version>${javacpp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>llvm</artifactId>
            <version>${bytedeco.version}</version>
        </dependency>

        <!-- Native libraries voor het target-platform.
             De plugin-jar is hierdoor platform-specifiek. -->
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>javacpp</artifactId>
            <version>${javacpp.version}</version>
            <classifier>${javacpp.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>llvm</artifactId>
            <version>${bytedeco.version}</version>
            <classifier>${javacpp.platform}</classifier>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <!-- nabu-runtime bundelen: de linker (MinGW-gcc-pad) heeft
                 nabu_runtime.c/.h nodig om de SEH-persoonlijkheid/linktijd-
                 functies mee te compileren. Bundelen in de plugin-jar is de
                 enige betrouwbare plek voor een maven-deployment (geen
                 repo-checkout gegarandeerd). -->
            <resource>
                <directory>${project.basedir}/../runtime</directory>
                <targetPath>nabu/runtime</targetPath>
                <includes>
                    <include>nabu_runtime.c</include>
                    <include>nabu_runtime.h</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <!-- compiler classes are comming from the daemon -->
                                <filter>
                                    <artifact>io.github.potjerodekool:nabu-compiler</artifact>
                                    <excludes>
                                        <exclude>**</exclude>
                                    </excludes>
                                </filter>
                                <!-- Remove jar-signatures -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-plugin-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${user.home}/.nabu/plugins</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}</directory>
                                    <includes>
                                        <include>${project.build.finalName}.jar</include>
                                    </includes>
                                </resource>
                            </resources>
                            <overwrite>true</overwrite>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>